# elite_help_tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  elite_main.cc
cmake/presets/: cfg-build-modes.json  cfg-build-tools.json  cfg-options.json
include/: database_import_state.h  databse_storage.h  elite_data.h  elite_events.h  file_io.h
src/: CMakeLists.txt  database_import_state.cc  database_storage.cc  discover_logic.cc  elite_data.cc  elite_main.cc  file_io.cc
ui/: CMakeLists.txt  elite_help_tool.cc  journal_log.cc  journal_log.h  logic.h  qformat.h  system_bodies_model.cc  system_bodies_model.h
ui/include/: journal_log.h  logic.h  main_window.h  mission_window.h  route_window.h  ship_loadout.h  system_bodies_model.h  system_window.h
ui/src/: CMakeLists.txt  current_state.cc  elite_help_tool.cc  journal_log.cc  mission_window.cc  route_window.cc  ship_loadout.cc  system_bodies_model.cc  system_window.cc
unit_tests/: CMakeLists.txt  db_ut.cc  value_calculation_ut.cc
